--- a/translations/serverside_achievement.txt
+++ b/translations/serverside_achievement.txt
@@ -5,4 +5,19 @@
         "#format"   "{1:N},{2:s}"
         "en"        "{1} just earned their Achievement ''{immortal}{2}{default}''!"
     }
+
+    "My List Menu Title"
+    {
+        "en"    "My Achievement List"
+    }
+
+    "Item Empty"
+    {
+        "en"    "Empty!"
+    }
+
+    "Completed"
+    {
+        "en"    "Completed"
+    }
 }
