--- a/addons/sourcemod/translations/serverside_achievement.txt
+++ b/addons/sourcemod/translations/serverside_achievement.txt
@@ -8,12 +8,17 @@
 
     "List Menu Title"
     {
-        "en"    "Achievement List"
+        "en"    "My Achievement List"
     }
 
     "Event Menu Title"
     {
         "en"    "Event"
+    }
+
+    "Achievement List Menu Title"
+    {
+        "en"    "All Achievement List"
     }
 
     "Event End Time"
